[tool.poetry]
name = "road_traffic_weather_dataset"
version = "0.1.0"
description = "Python package that consolidate, organize and clean road data, traffic data and weather data in Georgia."
authors = ["Alisa Ai <ha2484@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
geopandas = "^0.8.1"
requests = "^2.25.0"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
seaborn = "^0.11.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
